--- a/fieldBy/Main/Info/ApiGuide/ApiGuide.storyboard
+++ b/fieldBy/Main/Info/ApiGuide/ApiGuide.storyboard
@@ -193,16 +193,38 @@
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1t0-xI-jhG">
                                                     <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                                 </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GQO-fM-FGH">
+                                                    <rect key="frame" x="101" y="6" width="21" height="21"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0m2-VQ-uTJ">
+                                                            <rect key="frame" x="8" y="2.5" width="5" height="16"/>
+                                                            <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" name="MainColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="21" id="3to-eP-Hjh"/>
+                                                        <constraint firstItem="0m2-VQ-uTJ" firstAttribute="centerY" secondItem="GQO-fM-FGH" secondAttribute="centerY" id="Hlr-Yz-k23"/>
+                                                        <constraint firstAttribute="height" constant="21" id="vsV-kS-1zC"/>
+                                                        <constraint firstItem="0m2-VQ-uTJ" firstAttribute="centerX" secondItem="GQO-fM-FGH" secondAttribute="centerX" id="wsY-tn-L5N"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="GQO-fM-FGH" secondAttribute="trailing" constant="6" id="4pl-gT-stq"/>
                                                 <constraint firstAttribute="bottom" secondItem="1t0-xI-jhG" secondAttribute="bottom" id="9Xz-Oc-ytB"/>
                                                 <constraint firstItem="1t0-xI-jhG" firstAttribute="leading" secondItem="Kld-pM-03x" secondAttribute="leading" id="KBn-Wp-Xhj"/>
                                                 <constraint firstAttribute="trailing" secondItem="1t0-xI-jhG" secondAttribute="trailing" id="Ldm-yM-fEe"/>
+                                                <constraint firstItem="GQO-fM-FGH" firstAttribute="top" secondItem="Kld-pM-03x" secondAttribute="top" constant="6" id="WS6-NW-aIv"/>
                                                 <constraint firstItem="1t0-xI-jhG" firstAttribute="top" secondItem="Kld-pM-03x" secondAttribute="top" id="jEu-Na-E33"/>
                                             </constraints>
                                         </collectionViewCellContentView>
                                         <connections>
                                             <outlet property="mainImageView" destination="1t0-xI-jhG" id="kc5-wz-c6M"/>
+                                            <outlet property="numberContainer" destination="GQO-fM-FGH" id="qmb-jR-N4V"/>
+                                            <outlet property="numberLabel" destination="0m2-VQ-uTJ" id="IbI-Hl-EAI"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
