--- a/fieldBy/Main/Info/Noti/Noti.storyboard
+++ b/fieldBy/Main/Info/Noti/Noti.storyboard
@@ -27,6 +27,9 @@
                                 <color key="tintColor" name="Black"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                 <state key="normal" image="chevron.left" catalog="system"/>
+                                <connections>
+                                    <action selector="pop:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="7iQ-Cx-Ysc"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6lq-2W-hNE">
                                 <rect key="frame" x="20" y="128" width="32" height="22"/>
