--- a/fieldBy/Main/Campaign/Guide/Size/Size.storyboard
+++ b/fieldBy/Main/Campaign/Guide/Size/Size.storyboard
@@ -300,7 +300,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137.68115942028987" y="87.723214285714278"/>
+            <point key="canvasLocation" x="159" y="60"/>
         </scene>
     </scenes>
     <resources>
