--- a/fieldBy/Main/Info/Noti/Noti.storyboard
+++ b/fieldBy/Main/Info/Noti/Noti.storyboard
@@ -49,13 +49,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hFO-Ra-QUw">
-                                                    <rect key="frame" x="0.0" y="0.0" width="60" height="20"/>
+                                                    <rect key="frame" x="0.0" y="10" width="60" height="20"/>
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="16"/>
                                                     <color key="textColor" name="Black"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="알림 제목" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDA-Yw-JE4">
-                                                    <rect key="frame" x="0.0" y="28" width="48.5" height="16"/>
+                                                    <rect key="frame" x="0.0" y="38" width="48.5" height="16"/>
                                                     <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
                                                     <color key="textColor" red="0.46274509803921571" green="0.43529411764705883" blue="0.43529411764705883" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -85,7 +85,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="yfG-qX-tJz" secondAttribute="trailing" id="ID9-hy-W62"/>
                                                 <constraint firstItem="yfG-qX-tJz" firstAttribute="leading" secondItem="bkZ-pR-SCh" secondAttribute="leading" id="MzX-wJ-IFA"/>
                                                 <constraint firstAttribute="bottom" secondItem="yfG-qX-tJz" secondAttribute="bottom" id="SN1-zy-Pux"/>
-                                                <constraint firstItem="hFO-Ra-QUw" firstAttribute="top" secondItem="bkZ-pR-SCh" secondAttribute="top" id="TyO-Zp-GLn"/>
+                                                <constraint firstItem="hFO-Ra-QUw" firstAttribute="top" secondItem="bkZ-pR-SCh" secondAttribute="top" constant="10" id="TyO-Zp-GLn"/>
                                                 <constraint firstAttribute="bottom" secondItem="Vnt-UY-pqX" secondAttribute="bottom" constant="20" id="Uok-u0-qXH"/>
                                                 <constraint firstAttribute="trailing" secondItem="Lqb-md-CXi" secondAttribute="trailing" constant="2" id="af2-8B-re6"/>
                                                 <constraint firstItem="Vnt-UY-pqX" firstAttribute="leading" secondItem="bkZ-pR-SCh" secondAttribute="leading" id="dju-Dy-Ha5"/>
