--- a/fieldBy/Main/Campaign/Campaign.storyboard
+++ b/fieldBy/Main/Campaign/Campaign.storyboard
@@ -638,7 +638,7 @@
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bNM-YH-VTk">
                                                         <rect key="frame" x="27" y="14" width="174" height="31.5"/>
                                                         <string key="text">관련해서 궁금한 점이 있으신가요?
-DM으로 문의해주세요!</string>
+카카오채널로 문의해주세요!</string>
                                                         <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
                                                         <color key="textColor" red="0.46274509800000002" green="0.43529411759999997" blue="0.43529411759999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <nil key="highlightedColor"/>
@@ -919,6 +919,7 @@ DM으로 문의해주세요!</string>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="addressButton" destination="khQ-el-6pT" id="i0q-6S-nKl"/>
                         <outlet property="applyButton" destination="V4n-gr-nHM" id="KAo-Aa-vme"/>
                         <outlet property="backButton" destination="lhs-AO-22I" id="WUO-hL-BMW"/>
                         <outlet property="betweenDateLabel" destination="Piw-Fy-eFD" id="azf-tB-WF2"/>
