--- a/fieldBy/Main/Campaign/Guide/GuideCampaign.storyboard
+++ b/fieldBy/Main/Campaign/Guide/GuideCampaign.storyboard
@@ -454,7 +454,7 @@
                                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L7B-Nc-TRR">
                                                                         <rect key="frame" x="27" y="27.5" width="174" height="31.5"/>
                                                                         <string key="text">관련해서 궁금한 점이 있으신가요?
-DM으로 문의해주세요!</string>
+카카오채널로 문의해주세요!</string>
                                                                         <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="13"/>
                                                                         <color key="textColor" red="0.46274509800000002" green="0.43529411759999997" blue="0.43529411759999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                         <nil key="highlightedColor"/>
@@ -465,6 +465,9 @@ DM으로 문의해주세요!</string>
                                                                         <color key="tintColor" name="MainColor"/>
                                                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                                         <state key="normal" title="@fieldby_offcial &gt;"/>
+                                                                        <connections>
+                                                                            <action selector="kakaoChannel:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="BVw-Vg-d24"/>
+                                                                        </connections>
                                                                     </button>
                                                                 </subviews>
                                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
